# RepoPeftData

./: .gitignore  AGENT_HANDOFF.md  ENV_COMPUTE_CANADA.md  EXPERIMENT_LOG.md  HANDOVER_GRU_TRAINING.md  HANDOVER_V2_EXPERIMENTS.md  HF_DAILY_PAPERS.md  PLAN.md  README.md  TRAINING_MEMORY.md  cpu_sbatch.sh  gated_hypernetwork.err  gated_hypernetwork.out  pyproject.toml  requirements-frozen-cc-gru.txt  run_commit_parquet_local.sh  sbatch.sh  sbatch_commit_parquet_array.sh  slurm-8382965.out  visualize_commit_db.py  visualize_gru_ir_test_qnas.py  visualize_gru_ood_test_qnas.py  visualize_pairs.py  visualize_pairs_context.py  visualize_pairs_md.py  visualize_parquet_qnas.py  visualize_v1_qnas.py
analysis/: _icl_analysis.py  aggregate_decay_curve.py  analyze_results.py  collect_results.py  commit_diff_stats.py  commit_sampling_stats.py  compute_dataset_stats.py  error_reclassification.py  generate_figures.py  input_dist_stats.py  inspect_commit_parquet.py  lora_comparison.py  lora_diversity.py  per_repo_data_size_vs_em.py  plot_commit_chronology.py  plot_gru_anchor.py  plot_hypernet_size_scaling.py  plot_ood_per_commit_decay.py  plot_per_commit_decay_all_suites.py  print_smartcap_bench_table.py  recompute_metrics.py  repo_commit_qna_stats.py  run_tsne.py  scaling_law.py  smart_cap_qna_analysis.py  smart_cap_quality_check.py  token_length_stats.py  train_commit_diff_line_stats.py  train_commit_diff_stats_from_repos.py  visualize_loras.py
baselines/: hpo_optuna.py  train_with_best_params.py
c2l/: README.md  __init__.py  app.py  assertions.py  cli.py  config.py  core.py  (+8 more)
(+369 files in other folders)
